2005-06-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c src/util.h: #define isstringvalue(c_token) to include both
	isstring() and, if enabled, isstringvar().

	* src/plot2d.c src/plot3d.c src/set.c term/emf.trm term/gd.trm
	term/post.trm term/tgif.trm term/x11.trm: Modify all callers of
	isstring+isstringvar to either use the new combined routine or to call
	try_to_get_string() directly and handle both string and non-string
	returns.

	* src/axis.h: And one caller was hiding in a macro.

	Fixes the following bugs:
	+ `plot func(x), FILENAME` gave an error
	+ `set term pslatex font FONTNAME` should not have been legal
	+ `set title "foo" -1,-1`  (old style syntax with no "offset" keyword)
	  caused a parsing error
	+ fixes order-dependence of options to `set term emf`

	There are 60 odd instances of isstring() remaining, many of which are
	tests for format strings (e.g. `set format xy "format_string"`).

2005-06-28  Ethan Merritt  <merritt@u.washington.edu>

	* docs/checkdoc.c: Allow for lines beginning with '=' in gnuplot.doc
	(now used to indicated an explicit index entry).

2005-06-27  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/set.c (parse_label_options): Allow string variable or expression
	for font name.

2005-06-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/internal.c (f_calln): Prevent buffer overflow if more parameters
	than expected are passed to a function.

2005-06-26  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/Makefile.in: Replace "sort" by "LC_ALL=C sort" when building
	allterm.h to avoid localized sorting.

2005-06-24  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Rewritten section for "help exit".

2005-06-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/eval.c src/internal.h src/internal.c (f_strstrt): New built-in
	string function that searches for a substring within a longer string.
	Equivalent to C library function strstr(haystack,needle) except that