@@ -1,5 +1,5 @@
 /*
- * $Id: internal.h,v 1.12 2005/06/22 20:32:55 sfeam Exp $
+ * $Id: internal.h,v 1.13 2005/07/02 20:01:51 sfeam Exp $
  */
 
 /* GNUPLOT - internal.h */
@@ -85,6 +85,7 @@ void f_strlen __PROTO((union argument *x));
 void f_strstrt __PROTO((union argument *x));
 void f_sprintf __PROTO((union argument *x));
 void f_gprintf __PROTO((union argument *x));
+void f_words __PROTO((union argument *x));
 #endif
 
 #endif /* GNUPLOT_INTERNAL_H */
